@@ -1,6 +1,7 @@
 package org.dragberry.eshop.service.impl;
 
 import java.time.DayOfWeek;
+import java.util.Arrays;
 import java.util.List;
 
 import org.dragberry.eshop.model.common.AppInfo;
@@ -28,8 +29,8 @@ public class AppInfoServiceImpl implements AppInfoService {
 		AppInfo info = new AppInfo();
 		info.setCurrency("BYN");
 		info.setEmail("info@smartvitrina.by");
-		info.setPhones(List.of(new Phone(Phone.MTS, "8033 375-90-80"), new Phone(Phone.VELCOM, "8029 375-90-80")));
-		info.setWorkingDays(new WorkingDays(List.of(
+		info.setPhones(Arrays.asList(new Phone(Phone.MTS, "8033 375-90-80"), new Phone(Phone.VELCOM, "8029 375-90-80")));
+		info.setWorkingDays(new WorkingDays(Arrays.asList(
 				new WorkingDay(DayOfWeek.MONDAY, "9:00", "21:00", false),
 	            new WorkingDay(DayOfWeek.TUESDAY, "9:00", "21:00", false),
 	            new WorkingDay(DayOfWeek.WEDNESDAY, "9:00", "21:00", false),
